examples/failing/http-client.cz
# Example of how an http client might look
let r = net.http.client;
let res = r("https://example.com");
let resp = r(
    "https://some.api",
    {
        "method": "POST",
        "body": "[1,2,3]",
        "headers": {
            "x-foo": "bar"
        }
    }
);
print(json.deserialize(resp))
